<resources>
    <string name="app_name">pizza-mobile-app</string>
    <string name="login_page">Login page</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
    <string name="register">Register</string>
    <string name="menutext">menuText</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>


    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incorrect_username_or_password">Incorrect username or password!</string>
</resources>
